--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+  <div>
+    <%= link_to "Sign Up", "#" %>
+  </div>
+
 <% flash.each do |type, message| %>
   <div class="flash flash-<%= type %>">
     <%= message %>
